modified:   qtl/templates/wouter/gene_list.html 	modified:   qtl/templates/wouter/get_go.html 	modified:   qtl/views.py 	modified:   qtl/views.pyc

--- a/qtl/templates/wouter/gene_list.html
+++ b/qtl/templates/wouter/gene_list.html
@@ -74,10 +74,16 @@
 
 {% if l9 %}
 
-
 	<li>{{ l9 }}</li>
-
-    
+   
 {% endif %}
 
+
+{% if add_adjusted_p %}
+
+
+	<li>{{ add_adjusted_p }}</li>
+
+
+{% endif %}
 {% endblock %}
