--- a/qtl/templates/wouter/gene_list.html
+++ b/qtl/templates/wouter/gene_list.html
@@ -72,12 +72,15 @@
 
 <p><b>The following genelist is produced:</b></p>
 
-{% if l9 %}
+{% if gene_list %}
 
-	<li>{{ l9 }}</li>
+	<li>{{ gene_list }}</li>
    
 {% endif %}
 
+
+<p><b>The following GO annotations were found with corresponding fisher test p-values and q value:</b></p>
+<ul>datastructure: [go, fisher p less, fisher p greater, multiple test for fisher p greater ]</ul>
 
 {% if add_adjusted_p %}
 
